...
}

val Period.toTitle: String?
    get() = when (unit) {
        Period.Unit.DAY -> if (value == 1) "Daily" else "Every $value days"
        Period.Unit.WEEK -> if (value == 1) "Weekly" else "Every $value weeks"
        Period.Unit.MONTH -> if (value == 1) "Monthly" else "Every $value months"
        Period.Unit.YEAR -> if (value == 1) "Yearly" else "Every $value years"
        Period.Unit.UNKNOWN -> "Unknown"
    }

val Period.toDescription: String?
    get() = when (unit) {
        Period.Unit.DAY -> if (value == 1) "$value day" else "$value days"
...
