...
    var showMenu by remember { mutableStateOf(false) }
    Box {
        Button(
            onClick = { showMenu = true },
            modifier = Modifier.fillMaxWidth(),
        ) {
            Text("Present Paywall")
            Icon(
                Icons.Default.ArrowDropDown,
                contentDescription = null,
                modifier = Modifier.size(18.dp),
            )
        }
...
