...
                        isUpgrade.value,
                        isPersonalized.value
                    )
                },
                modifier = Modifier.fillMaxWidth()
            ) {
                Text(text = "Buy package (default option)", fontSize = 10.sp)
            }
            Button(
                onClick = {
                    onPurchaseProductClicked(
                        view,
                        currentPackage.product,
...
                        } else {
                            null
                        }
                        if (error != null) {
                            MaterialAlertDialogBuilder(context)
                                .setMessage(error)
                                .setPositiveButton("OK") { dialog, _ -> dialog.dismiss() }
                                .show()
                        } else if (selected != null) {
                            onPurchaseSubscriptionOptionClicked(
                                view,
                                selected,
                                isUpgrade.value,
...
