...
                android:layout_height="wrap_content"
                android:text="Login with User ID"
                android:layout_marginTop="@dimen/padding_small"
                app:layout_constraintTop_toBottomOf="@+id/login_username_input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/anonymous_user_button"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/anonymous_user_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Continue as random user"
...
