...
                        customerInfo?.managementURL?.let { url ->
                            Spacer(modifier = Modifier.height(8.dp))
                            Button(onClick = {
                                val intent = Intent(Intent.ACTION_VIEW, url)
                                context.startActivity(intent)
                            }) {
                                Text("Manage")
                            }
                        }
                    }
                }
            }

...
