...
                        listOf(
                            SettingState.Text("Current User ID", "current-user-id"),
                            SettingState.Text("Active entitlements", "pro, premium"),
                        ),
                    ),
                    SettingGroupState(
                        "Offerings",
                        listOf(
                            SettingState.Text("current", "TODO"),
                            SettingState.Text("default", "TODO"),
                        ),
                    ),
                ),
            )

            override fun toastDisplayed() {
...
