...
    tappedOnDisplayOfferingAsCondensedFooter: (Offering) -> Unit,
    dismissed: () -> Unit,
) {
    val activity = LocalContext.current as MainActivity
    DropdownMenu(expanded = true, onDismissRequest = { dismissed() }) {
        DropdownMenuItem(
            text = { Text(text = "Navigate to paywall") },
            onClick = { tappedOnNavigateToOffering(offering) },
        )
        DropdownMenuItem(
            text = { Text(text = "Display paywall as dialog") },
            onClick = { tappedOnDisplayOfferingAsDialog(offering) },
        )
...
