<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="OK">OK</string>
    <string name="loading">Loading</string>
    <string name="restore_purchases">Restore purchases</string>
    <string name="restore">Restore</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="terms">Terms</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy">Privacy</string>
    <string name="continue_cta">Continue</string>
    <string name="default_offer_details_with_intro_offer">Start your {{ sub_offer_duration }} trial, then {{ total_price_and_per_month }}.</string>
    <string name="package_discount">%1$d%% off</string>
    <string name="all_plans">All plans</string>
    <string name="annual">Annual</string>
    <string name="semester">6 month</string>
    <string name="quarter">3 month</string>
    <string name="bimonthly">2 month</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="lifetime">Lifetime</string>
    <string name="no_browser_cannot_open_link">No browser installed. Link could not be opened.</string>
    <string name="cannot_open_link">Link invalid. Could not be opened.</string>
    <!-- Default Paywall -->
    <string name="revenuecatui_purchase">Purchase</string>
    <string name="revenuecatui_restore_purchases">@string/restore_purchases</string>
    <string name="revenuecatui_preview_workflow_load_error">The preview workflow could not be loaded. Please try again.</string>
</resources>
