appId: com.revenuecat.paywall_tester
---
- launchApp:
    clearState: true
- tapOn: App Info
- assertVisible:
    text: "Current active entitlements: []"
- tapOn: Offerings
- tapOn: default
- tapOn: Navigate to paywall
- assertVisible: Get CatPrrro
- tapOn: "12"
- tapOn: Subscribe now
- assertVisible: "Product: test_yearly.*"
- assertVisible: ".*Price: \\$11.99.*"
- assertVisible: ".*Phase: \\$11.99 for P1Y.*"
- tapOn: TEST VALID PURCHASE
- tapOn: App Info
- tapOn: Refresh
- assertVisible: "Current active entitlements: [pro_cat]"
